// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/CommentsList comments show up 1`] = `
<div>
  <div
    class="CommentsList"
  >
    <div
      class="CommentsList__new"
    >
      <img
        class="comment-avatar"
        src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
      />
      <div
        class="MarkdownEditor octo-editor newcomment "
      >
        <div
          class="octo-editor-preview octo-placeholder"
          data-testid="preview-element"
        >
          <p>
            Add a comment...
          </p>
        </div>
      </div>
      
    </div>
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="a long time ago"
        >
          <div
            class="comment-date"
          >
            a long time ago
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="IconButton"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 2
        </p>
      </div>
    </div>
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="a long time ago"
        >
          <div
            class="comment-date"
          >
            a long time ago
          </div>
        </div>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="IconButton"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 1
        </p>
      </div>
    </div>
    <hr
      class="CommentsList__divider"
    />
  </div>
</div>
`;

exports[`components/cardDetail/CommentsList comments show up in readonly mode 1`] = `
<div>
  <div
    class="CommentsList"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="a long time ago"
        >
          <div
            class="comment-date"
          >
            a long time ago
          </div>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 2
        </p>
      </div>
    </div>
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="a long time ago"
        >
          <div
            class="comment-date"
          >
            a long time ago
          </div>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 1
        </p>
      </div>
    </div>
    <hr
      class="CommentsList__divider"
    />
  </div>
</div>
`;
